Implémentation complète de l'entité Technicien (backend + frontend)

--- a/gestion-production-front/src/app/modules/machine/machine.component.html
+++ b/gestion-production-front/src/app/modules/machine/machine.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="machineForm" (ngSubmit)="onSubmit()" class="form">
     <input formControlName="nom" placeholder="Nom de la machine" required />
     <input formControlName="etat" placeholder="État" required />
-    <input type="date" formControlName="maintenance_prochaine" required />
+    <input type="date" formControlName="maintenanceProchaine" required />
     <button type="submit">
       {{ machineForm.value.id ? 'Modifier' : 'Ajouter' }}
     </button>
@@ -24,7 +24,7 @@
       <tr *ngFor="let machine of machines">
         <td>{{ machine.nom }}</td>
         <td>{{ machine.etat }}</td>
-        <td>{{ machine.maintenance_prochaine | date }}</td>
+        <td>{{ machine.maintenanceProchaine | date }}</td>
         <td>
           <button (click)="editMachine(machine)">Modifier</button>
           <button (click)="deleteMachine(machine.id)">Supprimer</button>
